--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,8 @@ docs/_build/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -92,3 +93,6 @@ $RECYCLE.BIN/
 *.msi
 *.msm
 *.msp
+
+# project file
+*.sublime-workspace
